<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_screen">Login_Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="d_day_description">D-Day</string>
    <string name="InSeoul">In Seoul</string>
    <string name="walkintoseoul">걸어서 서울속으로..</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Login</string>
    <string name="today_fst">오늘의 축제는..</string>
    <string name="search_hint">"검색어를 입력하시오"</string>
    <string name="intro">소개</string>
    <string name="operation">운영정보</string>
    <string name="map">지도</string>
    <string name="sns">sns</string>
    <string name="complete_button_description">complete</string>
    <string name="wish_button_description">wish</string>
    <string name="landmark">관광지</string>
    <string name="festival">축제</string>
    <string name="create_account"><u>Create Account?</u></string>
    <string name="Forgot_PassWord"><u>Forgot Password?</u></string>
    <string name="guide_Mention">아래의 정보를 입력해주세요</string>
    <string name="slide_check">옆으로 넘겨서 이미지인식 결과를 확인해보세요 -></string>
    <string name="submit">확인</string>
    <string name="take_photo">카메라로 사진 촬영</string>
    <string name="get_image">앨범으로 사진 선택</string>
    <string name="image_classification">이미지 인식</string>
    <string name="lm_title">랜드마크 이름</string>
    <string name="location">주</string>
    <string name="id">ID</string>
    <string name="pwd">PWD</string>
    <string name="welcome_comment">In Seoul에\n오신 것을 환영합니다.</string>
    <string name="hint_id"> Enter your ID</string>
    <string name="hint_pwd"> Enter your PASSWORD</string>
    <string name="sing_in"> </string>


</resources>