<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LmDetailActivity">
    <include layout="@layout/lmdatail_toolbar"/>


<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:background="#A05CDC">-->

<!--        <TextView-->
<!--            android:id="@+id/app_title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/InSeoul"-->
<!--            android:textSize="30dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.095"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->


<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
    <FrameLayout
        android:id="@+id/contents_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lm_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lm_title"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/complete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/lm_image"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="15dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/lm_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="15sp"
                android:background="@drawable/text_border"
                android:paddingVertical="10dp"
                android:layout_marginTop="2dp"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/detail_result"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/lm_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/lm_operation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/operation" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/lm_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/lm_sns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sns" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigationview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/main_menu_bottom" />

</LinearLayout>