<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/seoul_img"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="75dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chosuncentennial_otf"
            android:text="@string/InSeoul"
            android:textColor="#808080"
            android:textSize="50dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752" />

        <TextView
            android:id="@+id/walkintoSeoul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chosuncentennial_otf"
            android:text="@string/walkintoseoul"
            android:textColor="#808080"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.908" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="#C0C0C0"
            android:textSize="28sp"
            android:fontFamily="@font/chosuncentennial_otf"
            app:layout_constraintBottom_toTopOf="@+id/login_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:id="@+id/input_field"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:background="#50000000"
                android:orientation="vertical"
                android:paddingVertical="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="5dp">

                <LinearLayout
                    android:id="@+id/get_userid"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/IdField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/id"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/userid"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:ems="10"
                        android:hint="@string/hint_id"
                        android:textColorHint="#808080"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/get_userpwd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pwdField"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/pwd"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/userpwd"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:ems="10"
                        android:hint="@string/hint_pwd"
                        android:textColorHint="#808080"
                        android:inputType="textPassword"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/SignIn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_field">

            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="#50000000"
                android:text="s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignIn_layout">
            <Button
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/forgot_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>
            <Button
                android:id="@+id/forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Forgot_PassWord"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_account"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>