<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetectionActivity">


    <ImageView
        android:id="@+id/landmark_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigationview"
        app:layout_constraintTop_toBottomOf="@+id/landmark_image"
        tools:layout_editor_absoluteX="50dp">

        <Button
            android:id="@+id/cameraBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:color="#E8E8E8"
            android:textSize="20dp"
            android:text="@string/take_photo" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:padding="0dp"-->
<!--            android:textSize="20dp"-->
<!--            android:text="또는"-->
<!--            android:textAlignment="center"></TextView>-->

        <Button
            android:id="@+id/galleryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:color="#E8E8E8"
            android:textSize="20dp"
            android:text="@string/get_image" />

        <Button
            android:id="@+id/resultBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:color="#E8E8E8"
            android:textSize="20dp"
            android:text="@string/image_classification" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigationview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/main_menu_bottom"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>