<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImageClassificationResult">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#A05CDC">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InSeoul"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/contents_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <!--            <TextView-->
<!--                android:id="@+id/result_name"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:text="경복궁"-->
<!--                android:textSize="30dp" />-->

<!--            <ImageView-->
<!--                android:id="@+id/lm_result_image"-->
<!--                android:layout_width="394dp"-->
<!--                android:layout_height="361dp"-->
<!--                android:layout_marginTop="15dp"-->
<!--                app:srcCompat="@drawable/a" />-->

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="match_parent"
                android:layout_height="430dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:textSize="17dp"
                android:gravity="center"
                android:text = "@string/slide_check"/>

            <Button
                android:id="@+id/result_confirm"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_centerInParent="true"
                android:text="@string/submit" />

        </LinearLayout>
    </FrameLayout>

    <!-- content를 담을 가장 큰 layout -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigationview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/main_menu_bottom" />


</LinearLayout>